2010-10-21  Sergio Martin <sergio.martin@artica.es>

	* lib/PandoraFMS/DB.pm: Added a generic update function to return
	the number of changes

	* util/pandora_manage.pl: Added the unblock policies to the CLI and
	the block/unblock policies when it are applied.

2010-10-21  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/Tools.pm: Fixed timeout option for FreeBSD ping.
	(Note: In ping6, '-t' option is not implemented. So, 'networktimeout'
	is not used with ping6.)

2010-10-21  Sergio Martin <sergio.martin@artica.es>

	* util/recon_scripts
	util/recon_scripts/PandoraFMS
	util/recon_scripts/snmpdevices.pl: Added the example recon script
	that creates several modules for each searched interface

2010-10-21  Junichi Satoh  <junichi@rworks.jp>

	* lib/PandoraFMS/NetworkServer.pm: Deleted FreeBSD specific SNMPGET
	definition. It is the same as Linux.

	* lib/PandoraFMS/Tools.pm: Added FreeBSD specific Ping function.

2010-10-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Pass the recon task group_id and
	  create_incident parameters to the recon script.

2010-10-20  Ramon Novoa  <rnovoa@artica.es>

	* lib/PandoraFMS/ReconServer.pm: Pass the recon task id to the recon
	  script.

2010-10-20  Sancho Lerena <slerena@artica.es>

    * conf/pandora_server.conf.windows: Sample conf for running pandora server
    on Windows (see windows.README).

    * lib/PandoraFMS/NetworkServer.pm: Adapted to have SNMPGET and PING functions
    redefined by each SO, this will allow to have native support on pandora
    to run under different OS (need to check FreeBSD and Solaris!). Windows
    support implemented.

    * lib/PandoraFMS/Core.pm: Removed ping functions here and moved to Tools.pm

    * lib/PandoraFMS/Tools.pm: Adapted Ping functions to work with any SO, at
    this time Linux and Windows only, need to check for Solaris and BSD.

    * util/windows.README: Small doc on how to make Pandora Server work on 
    Windows servers.
