@@ -1,3 +1,11 @@
+2010-10-22  Junichi Satoh  <junichi@rworks.jp>
+
+	* lib/PandoraFMS/Tools.pm: Changed ping count to for() loop instead of
+	using count(-c) option in pandora_ping(). By it, ping execution can be
+	finished in short time.
+	Added support for Solaris.
+	Changed some ping usage for FreeBSD.
+
 2010-10-21  Sergio Martin <sergio.martin@artica.es>
 
 	* lib/PandoraFMS/DB.pm: Added a generic update function to return
